# GHC-Repro

./: GHC-Repro.cabal  stack-8.4.3.yaml  stack.yaml  test-ghci.sh  test.sh
.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/flag-cache/: GHC-Repro-0.1.0.0-JWTidFfrPUd30cguBBOQRN
.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/pkgdb/: GHC-Repro-0.1.0.0-JWTidFfrPUd30cguBBOQRN.conf
.stack-work/install/x86_64-linux-nopie/lts-12.6/8.4.3/flag-cache/: GHC-Repro-0.1.0.0-KJ8IdUsiov7EOTnqbYQFGv
.stack-work/install/x86_64-linux-nopie/lts-12.6/8.4.3/pkgdb/: GHC-Repro-0.1.0.0-KJ8IdUsiov7EOTnqbYQFGv.conf  package.cache
pkgdb-8.2.2/: package.cache
src/Tests/: Bad.hs  Good.hs  Link.hs  PrismLink.hs
