name:                GHC-Repro
version:             0.1.0.0
synopsis:            Minimal example of strange behavior
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tests.Link
                       Tests.Good
                     
  build-depends:       base >= 4.7
  default-language:    Haskell2010
